...
    </fragment>

    <fragment
        android:id="@+id/loginFragment"
        android:name="playduin.locationtracker.ui.login.LoginFragment"
        android:label="LoginFragment"
        tools:layout="@layout/login_fragment">
        <argument
            android:name="launcher"
            app:argType="integer"
            android:defaultValue="1" /> <!-- Map -->
        <action
            android:id="@+id/action_loginFragment_to_registrationFragment"
...
